application/iam-db-authentification/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-db-authentification
  namespace: iam-db-authentification
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: iam-db-authentification.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iam-db-authentification
            port:
              number: 8080
